Modification as per PR comment